--- a/budget-app/src/App.css
+++ b/budget-app/src/App.css
@@ -161,7 +161,7 @@ body {
   margin-top: 40px;
 }
 
-.chartHeading > h1{
+.chartHeading > h1 {
   margin: 0;
 }
 
@@ -216,7 +216,8 @@ body {
   box-shadow: 1px 4px 7px 2px rgba(0, 0, 0, 0.32);
 }
 
-.buble > input, select {
+.buble > input,
+select {
   margin-top: 30px;
 }
 
@@ -236,7 +237,7 @@ body {
   cursor: pointer;
   transition: all 0.3s ease;
 }
-.addTransaction:hover{
+.addTransaction:hover {
   background-color: transparent;
   outline: 1px solid rgb(255, 72, 136);
   color: rgb(255, 72, 136);
@@ -265,6 +266,28 @@ body {
 .manageWrapper:hover,
 .statisticsWrapper:hover {
   transform: scale(1.2);
+}
+
+.budgetInput {
+  background: transparent;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom:1px solid var(--main-color);
+  padding: 6px 8px;
+}
+
+.budgetInput::placeholder {
+  color: var(--main-color);
+  letter-spacing: 1px;
+  font-size: 1.1em;
+}
+
+.sendBudget {
+  border: none;
+  outline: none;
+  background: transparent;
+  cursor: pointer;
 }
 
 .errorWrapper {
