--- a/budget-app/src/App.css
+++ b/budget-app/src/App.css
@@ -198,8 +198,14 @@ body {
 
 .chartWrapper > canvas {
   padding: 10px;
-  width: 350px;
-  height: 350px;
+  width: 325px;
+  height: 325px;
+}
+
+.graphLabelWrapper {
+  position: absolute;
+  left: 32.5%;
+  top: 21%;
 }
 
 .buble {
