--- a/budget-app/src/App.css
+++ b/budget-app/src/App.css
@@ -312,11 +312,30 @@ select {
   gap: 20px;
   margin-top: -30px;
   justify-content: space-evenly;
+  z-index: 1000;
 }
+
 .transactionsWrapper > h1 {
   text-align: center;
   font-size: 1.6em;
   margin: 0;
+}
+.statsTransactionsWrapper {
+  display: flex;
+  flex-direction: column;
+  width: 82%;
+  margin: 0 auto;
+  margin-top: -20px;
+  gap: 20px;
+  box-shadow: -2px -1px 6px 1px rgba(0,0,0,0.32);
+  z-index: 1000;
+}
+
+.statsTransactionsWrapper > h1 {
+  text-align: left;
+  margin-left: 20px;
+  font-size: 1.6em;
+  color: rgb(255, 72, 136);
 }
 
 .tansactionsHeading {
@@ -335,7 +354,7 @@ select {
   flex-direction: column;
   width: 80%;
   margin: 0 auto;
-  height: 250px;
+  height: 200px;
   padding-bottom: 40px;
   overflow-y: auto;
 }
